--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="codelib.html">Code Library</a></li>
-                        <li><a href="contactus.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact </a></li>
                         <li><a href="login2.html">Login</a></li>
                     </ul>
                 </div>
@@ -28,7 +28,7 @@
             </nav>
             <div class="text-box">
                 <h1>Better Website Better Learning</h1>
-                <p>Well organized and easy to understand Web building website with lots of examples of how to use HTML, CSS <br>and you are good to go</p>
+                <p>Well organized and easy to understand Web building website with lots of examples of how to use HTML and CSS <br>and you are good to go</p>
                 <a href="kmalhtml.html" class="hero-btn">Know more about Languages</a>
             </div>
         </section>
